fix landing page alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,6 +15,7 @@
 
 .title {
   font-size: 4em;
+  text-align: center;
 }
 
 .card {
